# tigre-forecasting

./: CNAME  asset-manifest.json  index.html
backend/: pom.xml
frontend/: .editorconfig  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  App.tsx  (+1 more)
python-api/: .dockerignore  .gitignore  Dados de Marketing - Tigre - Página1.csv  Dockerfile  INCC_Prophet_Format.xlsx  SELIC.xlsx  main.py  pyproject.toml  requirements.txt  skus_clusters.csv
python-api/app/: deps.py  main.py
python-api/app/auth/: __init__.py  jwt_handler.py  password_handler.py  permissions.py
python-api/app/config/: db_config.py
python-api/app/controllers/: auth_controller.py  import_controller.py  prophet_controller.py  validation_controller.py  xgboost_controller.py
python-api/app/data_processing/: clusterization.py  transformer.py
python-api/app/middleware/: __init__.py
python-api/app/models/: feature_metadata.py  metricas.py  ponto_previsao.py  previsao.py  sku.py  usuario.py
python-api/app/repository/: prophet_repository.py  query_repository.py  usuario_repository.py  xgboost_repository.py
python-api/app/schemas/: auth.py  forecasting.py  usuario.py  validation.py
python-api/app/services/: aggregation_service.py  auth_service.py  classification_service.py  import_service.py  prophet_service.py  redirect_service.py  validation_service.py  xgboost_service.py
python-api/app/utils/: enums.py  holiday.py  incc.py  selic.py  time.py
python-api/testes/: script_criar_usuario_teste.py  script_recriar_usuarios.py  script_verificar_banco.py
(+157 files in other folders)
