[project]
name = "tigre-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.2",
    "holidays>=0.80",
    "pandas>=2.3.2",
    "prophet>=1.1.7",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
]
