[project]
name = "tigre-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.2",
    "holidays>=0.80",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "prophet>=1.1.7",
    "psycopg2-binary>=2.9.10",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.43",
    "statsmodels>=0.14.5",
    "uvicorn>=0.37.0",
]
