[project]
name = "tigre-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.116.2",
    "holidays>=0.80",
    "jwt>=1.4.0",
    "matplotlib>=3.10.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "prophet>=1.1.7",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.11.9",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.43",
    "statsmodels>=0.14.5",
    "uvicorn>=0.37.0",
    "xgboost>=3.1.1",
]
